# quant-pack

./: .pre-commit-config.yaml  AUTH.md  README.md  pyproject.toml
.github/workflows/: build-publish.yml
services/: __init__.py  backtest_service.py  data_pipeline.py  database_manager.py  integrated_backtest_executor.py  market_data_service.py  service_factory.py  strategy_service.py
shared/: cli.py
shared/cli/: __init__.py  backtest_commands.py  data_commands.py  main.py  report_commands.py  strategy_commands.py
shared/config/: __init__.py  settings.py
shared/models/: __init__.py
shared/utils/: __init__.py
src/mysingle_quant/auth/: authenticate.py  deps.py  exception_handlers.py  exceptions.py  user_manager.py
src/mysingle_quant/auth/oauth2/: clients.py
src/mysingle_quant/auth/router/: __init__.py  auth.py  oauth2-old.py  oauth2.py  oauth_management.py  register.py  reset.py  users.py  verify.py
src/mysingle_quant/auth/schemas/: oauth2.py
src/mysingle_quant/auth/security/: cookie.py
src/mysingle_quant/core/: app_factory.py  config.py
src/mysingle_quant/quant/: README.md
src/mysingle_quant/quant/alpha_vantage/: commodities.py  core_stock.py  crypto.py  economic_indicators.py  fundamental.py  intelligence.py  options.py  technical_indicators.py
