[project]
name = "mysingle-quant"
version = "0.1.0"
description = "Common utilities and configurations for Quant Platform microservices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # 핵심 공통 의존성만 포함
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx-oauth>=0.16.1",
    "pyjwt>=2.10.1",
    "pwdlib>=0.2.1",
    "emails>=0.6",
    "jinja2>=3.1.6",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "motor>=3.3.2",
    "beanie>=1.23.6",
    "redis>=6.4.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "httpx>=0.25.2",
    "aiohttp>=3.9.4",
    "makefun>=1.16.0",
    "fastapi-oauth2>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mysingle_quant"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "UP", "B", "SIM", "I"]
lint.ignore = [
    "F403",
    "F405",
    "B008",
    "B904",
    "B006",
    "SIM105",
    "UP007",
    "E501",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_incomplete_defs = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
mypy_path = "src"

# 특정 모듈에 대한 무시 설정
[[tool.mypy.overrides]]
module = [
    "mysingle_quant.metrics.*",
    "mysingle_quant.health.*",
    "mysingle_quant.quant.*",
]
ignore_errors = true
